cumalitive layout shift fixes

--- a/css/poi-detail.css
+++ b/css/poi-detail.css
@@ -64,7 +64,9 @@
 }
 
 .poi-detail-pic img {
-  max-width: 100%;
+  max-width: 100%; /* constrain to container */
+  width: 100;
+  height: auto;
   object-fit: contain;
 }
 
